# sh0rtifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_SETUP.md  PRE_COMMIT_GUIDE.md  QUICKSTART.md  README.md  TESTING.md  UV_GUIDE.md  pyproject.toml  requirements.txt  setup.py  upload.sh
.github/workflows/: pr-ci-plugins.yml  release.yml
scripts/: setup-precommit.bat  setup-precommit.sh
src/: cli.py  core.py  gui.py
tests/: test_core.py
