[project]
name = "sh0rtifier"
version = "1.0.0"
description = "Convert 16:9 videos to YouTube Shorts format (9:16)"
authors = [
    {name = "sl0thm4n", email = "thesl0thm4n@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["youtube", "shorts", "video", "converter", "9:16", "16:9"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "moviepy==1.0.3",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=5.13.0",
]

[project.scripts]
sh0rtifier = "cli:main"
sh0rtifier-gui = "gui:main"

[project.urls]
Homepage = "https://github.com/sl0thm4n/sh0rtifier"
Repository = "https://github.com/sl0thm4n/sh0rtifier"
Issues = "https://github.com/sl0thm4n/sh0rtifier/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
